--- a/01Curriculo/css/style.css
+++ b/01Curriculo/css/style.css
@@ -19,14 +19,20 @@ footer{
   background-color: rgb(117, 115, 115);
 }
 
+/*NAV*/
+nav{
+  background-color: red;
+  height: 6vh;
+  
+}
+
 /* BANNER */
 .banner{
   justify-content: center;
   align-items: center;
-  background-color: aqua;
   margin: 0;
-  background-color: black;
   margin-bottom: 2%;
+  position: relative;
 }
 
 .banner-texto{
@@ -40,36 +46,31 @@ footer{
   text-align: center;
 }
 
-.superior{
-  
-  font-size: large;
-  color: white;
-}
 
 .banner-imagen{
   background-color: white;
-  background-image: url('/01Curriculo/img/banner\ 2.JPG');
+  background-image: url('/01Curriculo/img/banner.png');
   background-size: cover;
   background-position: center;
   padding: 1%;
   height: 37vh;
-  filter:blur(6px);
 }
 
-.inferior{
-  display: flex;
+.inferior {
   position: absolute;
-  top: 30%;
-  left: 45%;
+  top: 100%; 
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2;
 }
 
-.steamhappy{
-  height: 225px;
-  width: 225px;
+.steamhappy {
+  width: 10vw;      
+  height: 10vw;
   border-radius: 100%;
-  background-color: rgb(100, 90, 90);
-  border: 4px solid white
+  background-color: rgb(201, 234, 248);
+  border: 4px solid white;
 }
-
