--- a/03Login/css/loginstyle.css
+++ b/03Login/css/loginstyle.css
@@ -13,11 +13,87 @@ body{
   align-content: center;
 }
 
-.userlogin{
+.user-login{
   background-color: aliceblue;
-  width: 600px;
+  width: 700px;
   height: 40px;
   border-radius: 10px;
   margin-top: 10%;
   text-align: center;
+}
+.title{
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  text-transform: uppercase;
+  font-size: 15px;
+  padding-top: 5px;
+  color: blueviolet;
+}
+.userid{
+  padding-top: 20px;
+}
+.userid h2{
+  font-family: 'Roboto';
+  float: left;
+  margin-left: 50px;
+  margin-right: 5px;
+  padding-left: 5px;
+}
+
+.userid input{
+  height: 25px;
+  width: 300px;
+  border: solid 2px greenyellow;
+  border-radius: 10px;
+  margin-left: 20px;
+}
+
+.password{
+  padding-top: 20px;
+}
+.password h2{
+  font-family: 'Roboto';
+  float: left;
+  margin-left: 50px;
+  margin-right: 5px;
+  padding-left: 5px;
+}
+
+.password input{
+  height: 25px;
+  width: 300px;
+  border: solid 2px greenyellow;
+  border-radius: 10px;
+  margin-left: 1px;
+}
+
+.button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.button button{
+  border-radius: 15px;
+  width: 120px;
+  height: 35px;
+}
+
+.button p{
+  margin-top: 8px;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Roboto';
+}
+
+.button img{
+  float: left;
+}
+
+a{
+  margin-top: 20px;
+  float: left;
+  color: cornsilk;
+  width: 100%;
 }
