--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,31 @@
 *{
-  background-color: rgb(146, 146, 247);
   font-size: 20px;
+}
+
+.links{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+body{
+  justify-content: center;
+  align-items: center;
+}
+
+a{
+  background-color: #e1e1e1;
+  width: 400px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  text-decoration: none;
+  color: black;
+  border-radius: 20px;
+}
+
+a:hover{
+  background-color: #3B82F6;
+  color: white;
 }
