--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ a:hover{
   align-items: center;
   text-align: center;
   background-color: white;
-  padding: 60px;
+  padding: 3.75rem;
   height: fit-content;
   width: fit-content;
   border-radius: 40px;
