--- a/12Examen/styles.css
+++ b/12Examen/styles.css
@@ -89,3 +89,8 @@ h1 {
   box-shadow: 0 5px 15px rgba(106, 27, 154, 0.4);
   min-height: 10rem;
 }
+
+a{
+  text-decoration: none;
+  color: #e1e1e1;
+}
