--- a/12Examen/style.css
+++ b/12Examen/style.css
@@ -1,3 +1,9 @@
+*{
+  font-family: "Mulish", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
 body{
   margin: 0;
   padding: 0;
