--- a/15SistemaDeMantenimiento/views/editar-averia.ejs
+++ b/15SistemaDeMantenimiento/views/editar-averia.ejs
@@ -6,6 +6,15 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <form action="/editar-averia/<%= averia.id %>" method="POST">
+    <input type="text" name="equipo_id" id="equipo_id" placeholder="Equipo" value="<%= averia.equipo_id %>" required>
+    <input type="text" name="sintoma" id="sintoma" placeholder="Sintoma" value="<%= averia.sintoma %>" required>
+    <input type="text" name="diagnostico" id="diagnostico" placeholder="Diagnostico" value="<%= averia.diagnostico %>" required>
+    <input type="text" name="accion_correctiva" id="accion_correctiva" placeholder="Accion Correctiva" value="<%= averia.accion_correctiva %>" required>
+    <input type="text" name="piezas_reemplazadas" id="piezas_reemplazadas" placeholder="Piezas Reemplazadas" value="<%= averia.piezas_reemplazadas %>" required>
+    <input type="time" name="tiempo_inactividad" id="tiempo_inactividad" placeholder="Tiempo Inactividad" value="<%= averia.tiempo_inactividad %>" required>
+    <input type="text" name="tecnico_responsable" id="tecnico_responsable" placeholder="Tecnico Responsable" value="<%= averia.tecnico_responsable %>" required>
+    <input type="submit" value="Guardar">
+  </form>
 </body>
 </html>
