--- a/15SistemaDeMantenimiento/views/nueva-averia.ejs
+++ b/15SistemaDeMantenimiento/views/nueva-averia.ejs
@@ -6,6 +6,17 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <form action="/nueva-averia" method="POST">
+    <div class="contenedor-formulario" style="display: flex; flex-direction: column;">
+      <label for="equipo_id">Equipo: <input type="text" name="equipo_id" id="equipo_id" required></label>
+      <label for="sintoma">Sintoma: <input type="text" name="sintoma" id="sintoma" required></label>
+      <label for="diagnostico">Diagnostico: <input type="text" name="diagnostico" id="diagnostico" required></label>
+      <label for="accion_correctiva">Accion Correctiva: <input type="text" name="accion_correctiva" id="accion_correctiva" required></label>
+      <label for="piezas_reemplazadas">Piezas Reemplazadas: <input type="text" name="piezas_reemplazadas" id="piezas_reemplazadas" required></label>
+      <label for="tiempo_inactividad">Tiempo Inactividad: <input type="time" name="tiempo_inactividad" id="tiempo_inactividad" required></label>
+      <label for="tecnico_responsable">Tecnico Responsable: <input type="text" name="tecnico_responsable" id="tecnico_responsable" required></label>
+      <input type="submit" value="Guardar">
+    </div>
+  </form>
 </body>
 </html>
